llm/gradio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-chatbot
  labels:
    app: gradio-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio-chatbot
  template:
    metadata:
      labels:
        app: gradio-chatbot
    spec:
      containers:
        - name: gradio
          image: us-docker.pkg.dev/google-samples/containers/gke/gradio-app:v1.0.4
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 7860
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gradio-chatbot
spec:
  selector:
    app: gradio-chatbot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 7860
  type: LoadBalancer
