llm/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-gemma-3-1b-route
spec:
  parentRefs:
    - name: vllm-xlb
  rules:
    - matches:
        - headers:
            - type: Exact
              name: X-Gateway-Model-Name
              value: google/gemma-3-1b-it
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vllm-gemma-3-1b
          group: inference.networking.k8s.io
          kind: InferencePool
